modify the code using intellij suggestion